--- a/scripts/CSS/navbar.css
+++ b/scripts/CSS/navbar.css
@@ -68,7 +68,7 @@ html, body {
 
 /* Add spacing for the fixed navbar */
 body {
-    padding-top: 60px;
+    padding-top: 0px;
 }
 
 /* Add spacing for fixed navbar */
